# NeuralNetKit_Cpp

./: .gitignore  CMakeLists.txt  ReadMe.md
src/: CMakeLists.txt  main.cpp
src/loader/: CMakeLists.txt  loader.cpp  loader.hpp
src/model/: CMakeLists.txt  model.cpp  model.hpp
